Fix spacing between <Item />s

--- a/public/output.css
+++ b/public/output.css
@@ -601,6 +601,11 @@ a:hover {
   --tw-backdrop-sepia:  ;
 }
 
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
